@@ -7,6 +7,11 @@ when someone sends patches!).
 
 BUGS
 
+Odd things to investigate:
+- foreach_remove in filer settings.
+- newChild -> newChildText?
+- Remove Filter regexp code.
+
 Arrow in Find box.
 
 Is setting thumbnailers from the Set Icon box sensible UI?
