@@ -27,8 +27,8 @@ chdir;
 mkdir "rox-$a.$b.$c", 0775 or warn "mkdir() failed: $!\n";
 chdir "rox-$a.$b.$c";
 
-system "cvs -dtal197\@cvs.rox.sourceforge.net:/cvsroot/rox export -r Release-$a-$b-$c rox";
-#system "cvs -d:pserver:anonymous\@cvs.rox.sourceforge.net:/cvsroot/rox export -r Release-$a-$b-$c rox";
+system "cvs -dtal197\@cvs.sourceforge.net:/cvsroot/rox export -r Release-$a-$b-$c rox";
+#system "cvs -d:pserver:anonymous\@cvs.sourceforge.net:/cvsroot/rox export -r Release-$a-$b-$c rox";
 
 system "cd rox/ROX-Filer/src; autoconf; cd Docs; make";
 system "cp -r ~/Projects/rox/ROX-Filer/Messages/*.gmo rox/ROX-Filer/Messages";
