@@ -2,9 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+04-Apr-2004
+~~~~~~~~~~~
+Updated French manual translation (Arnaud Calvo).
+
 02-May-2004
 ~~~~~~~~~~~
-
 Updated Dutch translation (Jan Wagemakers).
 
 01-May-2004
